--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="/manifest.json">
 
   <meta name="theme-color" content="#ffffff">
   <meta charset="UTF-8">
