--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-icon-180x180.png">
   <link rel="icon" type="image/png" sizes="192x192"  href="./img/android-icon-192x192.png">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="manifest.webmanifest">
 
   <meta name="theme-color" content="#333">
   <meta charset="UTF-8">
