--- a/404.html
+++ b/404.html
@@ -56,6 +56,7 @@
 <body>
   <h1>Page Not Found</h1>
   <p>Sorry, but the page you were trying to view does not exist.</p>
+  <a href="./index.html"><button>go to index</button></a>
 </body>
 
 </html>
